compiler/tests/en/errors/compound_assign_bool.salam
// EXPECT: E021
func main:
    mut b : bool = true
    b += false
end
